--- a/purchase_order_allowed_manufacturer/views/product_supplierinfo_view.xml
+++ b/purchase_order_allowed_manufacturer/views/product_supplierinfo_view.xml
@@ -18,6 +18,7 @@
             <field name="model">manufacturer.line</field>
             <field name="arch" type="xml">
                 <tree string="Manufacturer Line">
+                    <field name="partner_id" context="{'default_supplier':True, 'default_customer':False}"/>
                     <field name="name" />
                     <field name="approved" />
                     <field name="approval_start_date" required="True"/>
@@ -34,6 +35,7 @@
             <field name="arch" type="xml">
                 <form string="Manufacturer Line">
                     <group>
+                        <field name="partner_id" context="{'default_supplier':True, 'default_customer':False}"/>
                         <field name="name" />
                         <field name="approved" />
                         <field name="approval_start_date" />
@@ -43,6 +45,28 @@
                 </form>
             </field>
         </record>
+
+         <record id="manufacturer_view_action" model="ir.actions.act_window">
+                     <field name="name">manufacturer.line</field>
+                     <field name="res_model">manufacturer.line</field>
+                     <field name="view_type">form</field>
+                     <field name="view_mode">tree,form</field>
+                     <field name="view_id" ref="manufacturer_line_tree_view" />
+                 </record>
+        <record model="ir.ui.view" id="manufacturer_line_search">
+                    <field name="name">manufacturer.line.search</field>
+                    <field name="model">manufacturer.line</field>
+                    <field name="arch" type="xml">
+                        <search string="Manufacturers">
+                            <filter name="partner_id" />
+                        </search>
+                    </field>
+                </record>
+
+
+        <menuitem id="manufacturers_menu_item" name="Manufacturers"
+          parent="purchase.menu_procurement_management"
+                  action="manufacturer_view_action" sequence="16"/>
 
         </data>
 </openerp>
