--- a/purchase_order_allowed_manufacturer/views/purchase_order_view.xml
+++ b/purchase_order_allowed_manufacturer/views/purchase_order_view.xml
@@ -17,6 +17,27 @@
                         </field>
                     </field>
                 </record>
+
+
+                <record model="ir.ui.view" id="manufacturer_purchase_line_form">
+                            <field name="name">manufacturer.purchsae.line
+                                .form</field>
+                            <field name="model">purchase.order.line</field>
+                            <field name="inherit_id"
+                                   ref="purchase.purchase_order_line_form" />
+                            <field name="arch" type="xml">
+                        <field name="company_id" position="after">
+                            <field name="order_manufacturer_ids"
+                                   widget="many2many_tags"
+                                   domain="[('id', 'in', manufacturer_ids[0][2])]"
+                                   string="Available Manufacturers"/>
+                            <field name="manufacturer_ids"
+                                   widget="many2many_tags"
+                                   string="Selected Manufacturers"/>
+                        </field>
+                            </field>
+                        </record>
+
             
     </data>
 </openerp>
