[IMP] purchase_order_allowed_manufacturer: usability changes

--- a/purchase_order_allowed_manufacturer/views/product_supplierinfo_view.xml
+++ b/purchase_order_allowed_manufacturer/views/product_supplierinfo_view.xml
@@ -2,16 +2,27 @@
 <openerp>
     <data>
         <record model="ir.ui.view" id="approved_supplierinfo_form_view">
-                    <field name="name">approved.supplierinfo.form</field>
-                    <field name="model">product.supplierinfo</field>
-                    <field name="inherit_id" ref="product.product_supplierinfo_form_view" />
-                    <field name="arch" type="xml">
-                        <field name="company_id" position="after">
-                            <field name="approved" />
-                            <field name="manufacturer_ids" />
-                        </field>
-                    </field>
-                </record>
+            <field name="name">approved.supplierinfo.form</field>
+            <field name="model">product.supplierinfo</field>
+            <field name="inherit_id" ref="product.product_supplierinfo_form_view" />
+            <field name="arch" type="xml">
+                <field name="company_id" position="after">
+                    <field name="approved" />
+                    <field name="manufacturer_ids" />
+                </field>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="approved_supplierinfo_tree_view">
+            <field name="name">approved.supplierinfo.tree</field>
+            <field name="model">product.supplierinfo</field>
+            <field name="inherit_id" ref="product.product_supplierinfo_tree_view" />
+            <field name="arch" type="xml">
+                <field name="company_id" position="after">
+                    <field name="approved" />
+                </field>
+            </field>
+        </record>
 
         <record model="ir.ui.view" id="manufacturer_line_tree_view">
             <field name="name">manufacturer.line.tree</field>
@@ -19,11 +30,13 @@
             <field name="arch" type="xml">
                 <tree string="Manufacturer Line">
                     <field name="partner_id" context="{'default_supplier':True, 'default_customer':False}"/>
-                    <field name="name" />
+                    <field name="name" string="Description"/>
                     <field name="approved" />
                     <field name="approval_start_date" required="True"/>
                     <field name="approval_end_date" />
                     <field name="active" />
+                    <field name="create_uid"/>
+                    <field name="write_date"/>
                 </tree>
             </field>
         </record>
@@ -36,11 +49,13 @@
                 <form string="Manufacturer Line">
                     <group>
                         <field name="partner_id" context="{'default_supplier':True, 'default_customer':False}"/>
-                        <field name="name" />
+                        <field name="name" string="Description"/>
                         <field name="approved" />
                         <field name="approval_start_date" />
                         <field name="approval_end_date" />
                         <field name="active" />
+                        <field name="create_uid"/>
+                        <field name="write_date"/>
                     </group>
                 </form>
             </field>
